--- a/cognocracia.html
+++ b/cognocracia.html
@@ -128,16 +128,17 @@
 
     <!-- Video -->
     <section class="video-container">
-        <iframe id="player" src="https://www.youtube.com/embed/VIDEO_ID1" allowfullscreen></iframe>
+        <iframe id="player" src='https://www.youtube.com/embed/LJQS9_yq024' allowfullscreen></iframe>
     </section>
 
 	<h2>Capítulos</h2>
 	<div class="chapter-list">
-            <div class="chapter-item" onclick="loadVideo('VIDEO_ID1')">Capítulo 1: Introducción</div>
-            <div class="chapter-item" onclick="loadVideo('VIDEO_ID2')">Capítulo 2: Historia</div>
-            <div class="chapter-item" onclick="loadVideo('VIDEO_ID3')">Capítulo 3: Participación</div>
-            <div class="chapter-item" onclick="loadVideo('VIDEO_ID4')">Capítulo 4: Ejemplos</div>
-            <div class="chapter-item" onclick="loadVideo('VIDEO_ID5')">Capítulo 5: Conclusión</div>
+            <div class="chapter-item" onclick="loadVideo('5I5EEL4OIzk')">Capítulo 1: Introducción: La crisis de la democracia</div>
+            <div class="chapter-item" onclick="loadVideo('VIDEO_ID2')">Capítulo 2: Nacimiento de la Cognocracia Participativa</div>
+            <div class="chapter-item" onclick="loadVideo('VIDEO_ID3')">Capítulo 3: Así funciona la Cognocracia</div>
+            <div class="chapter-item" onclick="loadVideo('VIDEO_ID4')">Capítulo 4: Debate ampliado y entrevistas en calle</div>
+            <div class="chapter-item" onclick="loadVideo('VIDEO_ID5')">Capítulo 5: Futuro participativo</div>
+	    <div class="chapter-item" onclick="loadVideo('VIDEO_ID5')">Capítulo 6: Sistemas similares y precedentes</div>
         </div>
 
     <script>
