--- a/cognocracia.html
+++ b/cognocracia.html
@@ -280,7 +280,7 @@ iframe {
       <div class="chapter-desc">Una mirada práctica al sistema cognocrático y su arquitectura de participación inteligente.</div>
     </div>
 
-    <div class="chapter-item" onclick="loadVideo(this, 'XXXXXX4', 'Capítulo 4: Debate ampliado y entrevistas en calle', 'Diversas voces ciudadanas analizan la viabilidad y los riesgos de aplicar la cognocracia participativa en contextos reales.')">
+    <div class="chapter-item" onclick="loadVideo(this, '0UPLLN1Bl9Y', 'Capítulo 4: Debate ampliado y entrevistas en calle', 'Diversas voces ciudadanas analizan la viabilidad y los riesgos de aplicar la cognocracia participativa en contextos reales.')">
       <div class="chapter-title">Capítulo 4: Debate ampliado y entrevistas en calle</div>
       <div class="chapter-desc">Opiniones, críticas y reflexiones sobre el modelo desde la voz de la gente.</div>
     </div>
@@ -290,7 +290,7 @@ iframe {
       <div class="chapter-desc">Una mirada al futuro: la unión entre razón, emoción y tecnología en la política del mañana.</div>
     </div>
 
-    <div class="chapter-item" onclick="loadVideo(this, 'XXXXXX6', 'Capítulo 6: Sistemas similares y precedentes', 'Analiza experiencias previas en democracia digital, gobierno abierto y participación ciudadana en el mundo.')">
+    <div class="chapter-item" onclick="loadVideo(this, 'iCjEicygl3U', 'Capítulo 6: Sistemas similares y precedentes', 'Analiza experiencias previas en democracia digital, gobierno abierto y participación ciudadana en el mundo.')">
       <div class="chapter-title">Capítulo 6: Sistemas similares y precedentes</div>
       <div class="chapter-desc">Un recorrido por otros modelos históricos y contemporáneos que inspiraron la cognocracia.</div>
     </div>
@@ -330,6 +330,7 @@ function loadVideo(element, videoId, title, description) {
 
 </body>
 </html>
+
 
 
 
