--- a/cognocracia.html
+++ b/cognocracia.html
@@ -154,7 +154,7 @@ iframe {
   <!-- CATÁLOGO -->
   <div id="catalog-view" class="catalog">
     <div class="card" onclick="openDocumentary('cognocracia')">
-      <img src="https://via.placeholder.com/200x120?text=Cognocracia" alt="Cognocracia">   <!-- IMG: COGNOCRACIA -->
+      <img src="https://i.postimg.cc/Gt3vXdC0/Mesa-de-trabajo-1.jpg" alt="Cognocracia">   <!-- IMG: COGNOCRACIA -->
 
       <div class="card-content">
         <div class="card-title">Cognocracia Participativa</div>
@@ -275,7 +275,7 @@ iframe {
       <div class="chapter-desc">El nacimiento de una propuesta que combina conocimiento, ética y tecnología al servicio del bien común.</div>
     </div>
 
-    <div class="chapter-item" onclick="loadVideo(this, 'XXXXXX3', 'Capítulo 3: Así funciona la Cognocracia', 'Explica los mecanismos internos del sistema: el voto ponderado, la verificación cognitiva y la toma de decisiones basada en mérito y conocimiento.')">
+    <div class="chapter-item" onclick="loadVideo(this, '0UPLLN1Bl9Y', 'Capítulo 3: Así funciona la Cognocracia', 'Explica los mecanismos internos del sistema: el voto ponderado, la verificación cognitiva y la toma de decisiones basada en mérito y conocimiento.')">
       <div class="chapter-title">Capítulo 3: Así funciona la Cognocracia</div>
       <div class="chapter-desc">Una mirada práctica al sistema cognocrático y su arquitectura de participación inteligente.</div>
     </div>
@@ -330,7 +330,3 @@ function loadVideo(element, videoId, title, description) {
 
 </body>
 </html>
-
-
-
-
