--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ iframe {
   <!-- CATÁLOGO -->
   <div id="catalog-view" class="catalog">
     <div class="card" onclick="openDocumentary('cognocracia')">
-      <img src="https://via.placeholder.com/200x120?text=Cognocracia" alt="Cognocracia">   <!-- IMG: COGNOCRACIA -->
+      <img src="https://i.postimg.cc/Gt3vXdC0/Mesa-de-trabajo-1.jpg" alt="Cognocracia">   <!-- IMG: COGNOCRACIA -->
 
       <div class="card-content">
         <div class="card-title">Cognocracia Participativa</div>
@@ -275,22 +275,22 @@ iframe {
       <div class="chapter-desc">El nacimiento de una propuesta que combina conocimiento, ética y tecnología al servicio del bien común.</div>
     </div>
 
-    <div class="chapter-item" onclick="loadVideo(this, 'XXXXXX3', 'Capítulo 3: Así funciona la Cognocracia', 'Explica los mecanismos internos del sistema: el voto ponderado, la verificación cognitiva y la toma de decisiones basada en mérito y conocimiento.')">
+    <div class="chapter-item" onclick="loadVideo(this, '0UPLLN1Bl9Y', 'Capítulo 3: Así funciona la Cognocracia', 'Explica los mecanismos internos del sistema: el voto ponderado, la verificación cognitiva y la toma de decisiones basada en mérito y conocimiento.')">
       <div class="chapter-title">Capítulo 3: Así funciona la Cognocracia</div>
       <div class="chapter-desc">Una mirada práctica al sistema cognocrático y su arquitectura de participación inteligente.</div>
     </div>
 
-    <div class="chapter-item" onclick="loadVideo(this, 'XXXXXX4', 'Capítulo 4: Debate ampliado y entrevistas en calle', 'Diversas voces ciudadanas analizan la viabilidad y los riesgos de aplicar la cognocracia participativa en contextos reales.')">
+    <div class="chapter-item" onclick="loadVideo(this, '0UPLLN1Bl9Y', 'Capítulo 4: Debate ampliado y entrevistas en calle', 'Diversas voces ciudadanas analizan la viabilidad y los riesgos de aplicar la cognocracia participativa en contextos reales.')">
       <div class="chapter-title">Capítulo 4: Debate ampliado y entrevistas en calle</div>
       <div class="chapter-desc">Opiniones, críticas y reflexiones sobre el modelo desde la voz de la gente.</div>
     </div>
 
-    <div class="chapter-item" onclick="loadVideo(this, 'XXXXXX5', 'Capítulo 5: Futuro participativo', 'Proyecta cómo la cognocracia podría integrarse en sistemas políticos híbridos, combinando inteligencia artificial y participación emocional humana.')">
+    <div class="chapter-item" onclick="loadVideo(this, 'CJSYwn1dzmw', 'Capítulo 5: Futuro participativo', 'Proyecta cómo la cognocracia podría integrarse en sistemas políticos híbridos, combinando inteligencia artificial y participación emocional humana.')">
       <div class="chapter-title">Capítulo 5: Futuro participativo</div>
       <div class="chapter-desc">Una mirada al futuro: la unión entre razón, emoción y tecnología en la política del mañana.</div>
     </div>
 
-    <div class="chapter-item" onclick="loadVideo(this, 'XXXXXX6', 'Capítulo 6: Sistemas similares y precedentes', 'Analiza experiencias previas en democracia digital, gobierno abierto y participación ciudadana en el mundo.')">
+    <div class="chapter-item" onclick="loadVideo(this, 'iCjEicygl3U', 'Capítulo 6: Sistemas similares y precedentes', 'Analiza experiencias previas en democracia digital, gobierno abierto y participación ciudadana en el mundo.')">
       <div class="chapter-title">Capítulo 6: Sistemas similares y precedentes</div>
       <div class="chapter-desc">Un recorrido por otros modelos históricos y contemporáneos que inspiraron la cognocracia.</div>
     </div>
@@ -330,4 +330,3 @@ function loadVideo(element, videoId, title, description) {
 
 </body>
 </html>
-
